@@ -110,6 +110,10 @@ CVS code -
   do_gotolinecolumn()
 	- Add parameter allow_update to control whether the screen is
 	  updated after moving. (DLR)
+  do_gotopos()
+	- Only include this function when DISABLE_SPELLER isn't defined,
+	  as the alternate spell checking code is now the only place
+	  where it's used. (DLR)
 - winio.c:
   edit_scroll(), edit_redraw(), edit_refresh()
 	- Clean up and simplify. (DLR)
